tests/res/classes/error_assign_undefined_member.say

class A {
    x;
}

say obj = A();
obj.y = true; // error: Property not found: "y"